data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_721.wast
;; 2. **Test Description:**    Check a `br_if` instruction within a `loop` that should only execute the branch when a counter variable is even. Introduce a condition always evaluating to `true` erroneously.    - **Constraint Checked:** Accurate branching within a loop based on a dynamically changing condition.    - **Relation to Incorrect Condition Evaluation:** Tests prevention of unconditional branching regardless of loop condition.

(assert_invalid
  (module
    (func $br_if_loop (param i32) (result i32)
      (local.get 0)
      (loop $loop (result i32)     ;; Start of loop with result type i32
        (local.get 0)
        (i32.const 2)
        (i32.rem_s)    ;; Check if the counter is even
        (i32.eqz)
        (br_if $loop)   ;; Erroneous unconditional branch within loop
        (local.get 0)
        (i32.const 1)
        (i32.add)    ;; Increment counter
        (local.set 0)
        (local.get 0)
        (i32.const 10)
        (i32.lt_s)
        (if (then)
          (br $loop)    ;; Correctly branch back to the start of the loop if counter < 10
        )
      )
      (local.get 0)    ;; Return the final value
    )
  )
  "type mismatch"
)